force-app/main/default/objects/Contact/fields/campo_des__c.field-meta.xml
<CustomField>
    <fullName>campo_des__c</fullName>
    <defaultValue>false</defaultValue>
    <label>campo_des</label>
    <type>Checkbox</type>
</CustomField>