force-app/main/default/objects/Contact/fields/TestDevOps2__c.field-meta.xml
<CustomField>
    <fullName>TestDevOps2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestDevOps2</label>
    <type>Checkbox</type>
</CustomField>