force-app/main/default/objects/Contact/fields/TestDevOps__c.field-meta.xml
<CustomField>
    <fullName>TestDevOps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestDevOps</label>
    <type>Checkbox</type>
</CustomField>